# THADSNBit

./: CMakeLists.txt
BitSprayer/: bitspray.cpp
Epi/: main.cpp  setu.cpp  setu.h  test.cpp
